examples/test/testpolicy12666.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12666
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key18: value24
      key6: value47
      key30: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value23
          key9: value24
          key23: value38
